News UAT/force-app/main/default/objects/Release_Task__c/Release_Task__c.object-meta.xml
<CustomObject>
    <description>Track Bugs, Enhancement Requests, and Action Items to be resolved during the Build, Validate, Deploy and/or Post-Deployment phases.</description>
    <label>Release Task</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Release Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>