News UAT/force-app/main/default/objects/Release_Task__c/fields/Age_in_days__c.field-meta.xml
<CustomField>
    <fullName>Age_in_days__c</fullName>
    <formula>NOW() -  CreatedDate</formula>
    <label>Age (in days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>