News UAT/force-app/main/default/objects/Release_Task__c/fields/Assign_to_Premier_Support__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_Premier_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign to Premier Support</label>
    <type>Checkbox</type>
</CustomField>