News UAT/force-app/main/default/objects/Release_Task__c/fields/Business_Interest_Score__c.field-meta.xml
<CustomField>
    <fullName>Business_Interest_Score__c</fullName>
    <formula>Business_Value_Score__c + Data_Accuracy_Score__c + New_Process_Score__c + Productivity_Score__c + User_Friendliness_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Interest Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>