News UAT/force-app/main/default/objects/Release_Task__c/fields/Business_Value__c.field-meta.xml
<CustomField>
    <fullName>Business_Value__c</fullName>
    <label>Business Value</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No impact</fullName>
                <default>true</default>
                <label>No impact</label>
            </value>
            <value>
                <fullName>Evolution requested has a negative impact</fullName>
            </value>
            <value>
                <fullName>Positive impact on business value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>