News UAT/force-app/main/default/objects/Release_Task__c/fields/Business_Value_Score__c.field-meta.xml
<CustomField>
    <fullName>Business_Value_Score__c</fullName>
    <formula>CASE(Business_Value__c, &quot;Evolution requested has a negative impact&quot;, -20, &quot;Positive impact on business value&quot;, 20,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Value Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>