News UAT/force-app/main/default/objects/Release_Task__c/fields/Closed__c.field-meta.xml
<CustomField>
    <fullName>Closed__c</fullName>
    <formula>CASE(Status__c  , 
&quot;Closed (Duplicate)&quot;, &quot;True&quot;,
&quot;Closed (Working As Designed)&quot;, &quot;True&quot;,
&quot;Closed (Question Answered)&quot;, &quot;True&quot;,
&quot;Closed (Verified)&quot;,&quot;True&quot;,
&quot;Closed (Not An Issue)&quot;,&quot;True&quot;,
&quot;False&quot;)</formula>
    <label>Closed</label>
    <type>Text</type>
</CustomField>