News UAT/force-app/main/default/objects/Release_Task__c/fields/Communication_Comments__c.field-meta.xml
<CustomField>
    <fullName>Communication_Comments__c</fullName>
    <label>Communication Comments</label>
    <type>TextArea</type>
</CustomField>