News UAT/force-app/main/default/objects/Release_Task__c/fields/Communication_needed__c.field-meta.xml
<CustomField>
    <fullName>Communication_needed__c</fullName>
    <label>Communication needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home Page Communication</fullName>
            </value>
            <value>
                <fullName>Training Webinar</fullName>
            </value>
            <value>
                <fullName>End User Documentation Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>