News UAT/force-app/main/default/objects/Release_Task__c/fields/Data_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Data_Accuracy__c</fullName>
    <label>Data Accuracy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not relevant</fullName>
                <default>true</default>
                <label>Not relevant</label>
            </value>
            <value>
                <fullName>Evolution requested has a negative impact on data quality</fullName>
            </value>
            <value>
                <fullName>Reduces risk of error on a importance information (example : direct link with cost or revenue)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>