News UAT/force-app/main/default/objects/Release_Task__c/fields/Data_Accuracy_Score__c.field-meta.xml
<CustomField>
    <fullName>Data_Accuracy_Score__c</fullName>
    <formula>CASE(Data_Accuracy__c, &quot;Evolution requested has a negative impact on data quality&quot;, -20, &quot;Reduces risk of error on a importance information (example : direct link with cost or revenue)&quot;, 20,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Accuracy Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>