News UAT/force-app/main/default/objects/Release_Task__c/fields/Derived_Urgency__c.field-meta.xml
<CustomField>
    <fullName>Derived_Urgency__c</fullName>
    <label>Derived Urgency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low (Nice to have)</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>