News UAT/force-app/main/default/objects/Release_Task__c/fields/Design_Comments__c.field-meta.xml
<CustomField>
    <fullName>Design_Comments__c</fullName>
    <label>Design Comments</label>
    <type>TextArea</type>
</CustomField>