News UAT/force-app/main/default/objects/Release_Task__c/fields/Design_Impact__c.field-meta.xml
<CustomField>
    <fullName>Design_Impact__c</fullName>
    <label>Design Impact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Workshop</fullName>
            </value>
            <value>
                <fullName>Communication to Design Team</fullName>
            </value>
            <value>
                <fullName>Gap Analysis with Release</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>