News UAT/force-app/main/default/objects/Release_Task__c/fields/Duplicate_Bug_Enhancement_Number__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Bug_Enhancement_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Duplicate Bug/Enhancement Number</label>
    <referenceTo>Release_Task__c</referenceTo>
    <relationshipLabel>Release Tasks</relationshipLabel>
    <relationshipName>Release_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>