News UAT/force-app/main/default/objects/Release_Task__c/fields/Enhancement_Objective__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_Objective__c</fullName>
    <label>Enhancement Objective</label>
    <type>TextArea</type>
</CustomField>