News UAT/force-app/main/default/objects/Release_Task__c/fields/Functional_Impact_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Functional_Impact_Analysis__c</fullName>
    <label>Functional Impact Analysis</label>
    <type>TextArea</type>
</CustomField>