News UAT/force-app/main/default/objects/Release_Task__c/fields/Global_Score__c.field-meta.xml
<CustomField>
    <fullName>Global_Score__c</fullName>
    <formula>Business_Interest_Score__c * User_or_Group_Impacted_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Business Interest Score) x (Scope of Change Impact Score)</inlineHelpText>
    <label>Global Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>