News UAT/force-app/main/default/objects/Release_Task__c/fields/Impact_Details__c.field-meta.xml
<CustomField>
    <fullName>Impact_Details__c</fullName>
    <label>Impact Details</label>
    <type>TextArea</type>
</CustomField>