News UAT/force-app/main/default/objects/Release_Task__c/fields/LOE_Hours__c.field-meta.xml
<CustomField>
    <fullName>LOE_Hours__c</fullName>
    <label>LOE (Hours)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 1 hour</fullName>
            </value>
            <value>
                <fullName>1 to 8 hours</fullName>
            </value>
            <value>
                <fullName>8+ to 40 hours</fullName>
            </value>
            <value>
                <fullName>40+ to 160 hours</fullName>
            </value>
            <value>
                <fullName>&gt; 160 hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>