News UAT/force-app/main/default/objects/Release_Task__c/fields/New_Process__c.field-meta.xml
<CustomField>
    <fullName>New_Process__c</fullName>
    <label>New Process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not relevant</fullName>
                <default>true</default>
                <label>Not relevant</label>
            </value>
            <value>
                <fullName>Low impact</fullName>
            </value>
            <value>
                <fullName>High impact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>