News UAT/force-app/main/default/objects/Release_Task__c/fields/New_Process_Score__c.field-meta.xml
<CustomField>
    <fullName>New_Process_Score__c</fullName>
    <formula>CASE( New_Process__c , &quot;High impact&quot;, 10, &quot;Low impact &quot;, 0,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Process Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>