News UAT/force-app/main/default/objects/Release_Task__c/fields/Peripheral_Application_Impact__c.field-meta.xml
<CustomField>
    <fullName>Peripheral_Application_Impact__c</fullName>
    <label>Peripheral Application Impact</label>
    <type>TextArea</type>
</CustomField>