News UAT/force-app/main/default/objects/Release_Task__c/fields/Productivity__c.field-meta.xml
<CustomField>
    <fullName>Productivity__c</fullName>
    <label>Productivity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not relevant</fullName>
                <default>true</default>
                <label>Not relevant</label>
            </value>
            <value>
                <fullName>Evolution requested has a negative impact on productivity</fullName>
            </value>
            <value>
                <fullName>Functional response time or process duration reduced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>