News UAT/force-app/main/default/objects/Release_Task__c/fields/Productivity_Score__c.field-meta.xml
<CustomField>
    <fullName>Productivity_Score__c</fullName>
    <formula>CASE( Productivity__c , &quot;Evolution requested has a negative impact on productivity&quot;, -20, &quot;Functional response time or process duration reduced&quot;, 10,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Productivity Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>