News UAT/force-app/main/default/objects/Release_Task__c/fields/Raised_by__c.field-meta.xml
<CustomField>
    <fullName>Raised_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who is the original requester?</inlineHelpText>
    <label>Raised by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>