News UAT/force-app/main/default/objects/Release_Task__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release</label>
    <referenceTo>Release_DO_NOT_USE__c</referenceTo>
    <relationshipLabel>Release Tasks</relationshipLabel>
    <relationshipName>Release_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>