News UAT/force-app/main/default/objects/Release_Task__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution</label>
    <type>TextArea</type>
</CustomField>