News UAT/force-app/main/default/objects/Release_Task__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>In Review / In Progress</fullName>
            </value>
            <value>
                <fullName>Fix Needed</fullName>
            </value>
            <value>
                <fullName>Work Complete</fullName>
            </value>
            <value>
                <fullName>Test in Progress</fullName>
            </value>
            <value>
                <fullName>Re-Open</fullName>
            </value>
            <value>
                <fullName>Ready for UAT</fullName>
            </value>
            <value>
                <fullName>Ready for Production</fullName>
            </value>
            <value>
                <fullName>Closed (Duplicate)</fullName>
            </value>
            <value>
                <fullName>Closed (Working As Designed)</fullName>
            </value>
            <value>
                <fullName>Closed (Question Answered)</fullName>
            </value>
            <value>
                <fullName>Closed (Verified)</fullName>
            </value>
            <value>
                <fullName>Closed (Not An Issue)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>