News UAT/force-app/main/default/objects/Release_Task__c/fields/Steps_to_Reproduce__c.field-meta.xml
<CustomField>
    <fullName>Steps_to_Reproduce__c</fullName>
    <label>Steps to Reproduce</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>