News UAT/force-app/main/default/objects/Release_Task__c/fields/Technical_Impact_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Technical_Impact_Analysis__c</fullName>
    <label>Technical Impact Analysis</label>
    <type>TextArea</type>
</CustomField>