News UAT/force-app/main/default/objects/Release_Task__c/fields/User_Friendliness__c.field-meta.xml
<CustomField>
    <fullName>User_Friendliness__c</fullName>
    <label>User Friendliness</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not relevant</fullName>
                <default>true</default>
                <label>Not relevant</label>
            </value>
            <value>
                <fullName>Evolution requested has a negative impact on user friendliness</fullName>
            </value>
            <value>
                <fullName>Positive impact on user friendliness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>