News UAT/force-app/main/default/objects/Release_Task__c/fields/User_Friendliness_Score__c.field-meta.xml
<CustomField>
    <fullName>User_Friendliness_Score__c</fullName>
    <formula>CASE( User_Friendliness__c , &quot;Evolution requested has a negative impact on user friendliness&quot;, -20, &quot;Positive impact on user friendliness&quot;, 20,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Friendliness Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>