News UAT/force-app/main/default/objects/Release_Task__c/fields/User_Interface_Impact_Analysis__c.field-meta.xml
<CustomField>
    <fullName>User_Interface_Impact_Analysis__c</fullName>
    <label>User Interface Impact Analysis</label>
    <type>TextArea</type>
</CustomField>