News UAT/force-app/main/default/objects/Release_Task__c/fields/User_or_Group_Impacted__c.field-meta.xml
<CustomField>
    <fullName>User_or_Group_Impacted__c</fullName>
    <description>Which user or group is affected by the request</description>
    <inlineHelpText>Which user or group is affected by the request</inlineHelpText>
    <label>User or Group Impacted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Business Unit</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>Region</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>