News UAT/force-app/main/default/objects/Release_Task__c/fields/User_or_Group_Impacted_Score__c.field-meta.xml
<CustomField>
    <fullName>User_or_Group_Impacted_Score__c</fullName>
    <formula>CASE(User_or_Group_Impacted__c , &quot;Business Unit&quot;, 1, &quot;Country&quot;, 5, &quot;Region&quot;,5, &quot;All&quot;, 10, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User or Group Impacted Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>