News UAT/force-app/main/default/objects/Release_Task__c/fields/Workaround__c.field-meta.xml
<CustomField>
    <fullName>Workaround__c</fullName>
    <label>Workaround?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not relevant</fullName>
                <default>true</default>
                <label>Not relevant</label>
            </value>
            <value>
                <fullName>Existing satisfactory alternative method</fullName>
            </value>
            <value>
                <fullName>Reasonable workaround (effort to make it happen)</fullName>
            </value>
            <value>
                <fullName>Difficult workaround (effort to make it happen)</fullName>
            </value>
            <value>
                <fullName>No alternative or unacceptable alternative method</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>