News UAT/force-app/main/default/objects/Release_Task__c/recordTypes/Action_Item.recordType-meta.xml
<RecordType>
    <fullName>Action_Item</fullName>
    <active>true</active>
    <description>Tracks project issues that do not need to go through Triage.</description>
    <label>Action Item</label>
</RecordType>