News UAT/force-app/main/default/objects/Release_Task__c/recordTypes/Bug.recordType-meta.xml
<RecordType>
    <fullName>Bug</fullName>
    <active>true</active>
    <description>Tracks bugs</description>
    <label>Bug</label>
</RecordType>