News UAT/force-app/main/default/objects/Release_Task__c/recordTypes/Enhancement_Request.recordType-meta.xml
<RecordType>
    <fullName>Enhancement_Request</fullName>
    <active>true</active>
    <description>Tracks enhancement requests</description>
    <label>Enhancement Request</label>
</RecordType>